feat(quality): 導入 SonarQube 與 Strix 程式碼品質與安全掃描工具鏈並修復 23 項可靠性缺陷